--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "debug": "^3.2.6",
     "ejs": "^2.6.1",
@@ -35,7 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.3",
+    "nodemon": "^1.18.5",
     "supertest": "^3.3.0"
   }
 }
