--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug": "^3.2.6",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.3.0",
     "pg": "^7.5.0",
     "util": "^0.11.0"
   },
