--- a/.envPattern
+++ b/.envPattern
@@ -1,7 +1,9 @@
-UCV_FHE_SIST_PORT = 
+UCV_FHE_SIST_PORT =
+SRVC_UCV_FHE_SIST_PORT=
+JWT_KEY=
 UCV_FHE_SIST_POSTGRES =
 UCV_FHE_SIST_POSTGRES_HOST =
 UCV_FHE_SIST_POSTGRES_PORT =
 UCV_FHE_SIST_POSTGRES_NAME =
 UCV_FHE_SIST_POSTGRES_USER =
-UCV_FHE_SIST_POSTGRES_PASSWORD = 
+UCV_FHE_SIST_POSTGRES_PASSWORD =
