--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "debug": "^3.2.6",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
