add dockerfile and changes in the repository

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,9 @@
-#file
-yarn.lock
+# ignore node modules/dependencies and log
+node_modules
+
+# ignore .git and .cache folders
+.git
+.cache
 
 # Logs
 logs
